create site-packages directory

--- a/tools/install
+++ b/tools/install
@@ -84,6 +84,7 @@ EOF
   # link with directory
   if [ ! -L "/usr/local/lib/python$py_ver/site-packages/fbgui" ]; then
     echo -e "[INFO] creating symlink to fbgui within /usr/local/lib/python$py_ver/site-packages/"
+    mkdir -p "/usr/local/lib/python$py_ver/site-packages/"
     ln -s "/usr/local/lib/fbgui" "/usr/local/lib/python$py_ver/site-packages/"
   fi
 }
